tests/journey/snapshots/cli__adjust_activity_snapshot_passes.snap
---
source: tests/cli.rs
info:
  program: pace
  args:
    - "--config"
    - tests/fixtures/configs/pace.toml
    - "--activity-log-file"
    - "D:\\a\\pace\\pace\\./tests/generated\\.tmpzdxfi8\\activities.pace.toml"
    - now
---
success: true
exit_code: 0
----- stdout -----
📆  Activity: "NewDescription" (NewCategory::SubCategory) started just now in UTC+00:00

----- stderr -----
