tests/journey/snapshots/cli__begin_snapshot_passes.snap
---
source: tests/cli.rs
info:
  program: pace
  args:
    - "--config"
    - tests/fixtures/configs/pace.toml
    - "--activity-log-file"
    - "D:\\a\\pace\\pace\\./tests/generated\\.tmpwF7i1d\\activities.pace.toml"
    - begin
    - MyActivity
    - "--tags"
    - "tag1,tag2"
    - "--category"
    - "MyCategory::SubCategory"
---
success: true
exit_code: 0
----- stdout -----
📆  Activity: "MyActivity" (MyCategory::SubCategory) started just now in UTC+00:00

----- stderr -----
