tests/journey/snapshots/cli__now_no_activities_snapshot_passes.snap
---
source: tests/cli.rs
info:
  program: pace
  args:
    - "--activity-log-file"
    - "C:\\Users\\dailyuse\\backup\\PARA\\Personal\\2 Areas\\Developer\\Maintenance\\pace\\pace-rs\\pace\\./tests/generated\\.tmpjGkvhs\\activities.pace.toml"
    - now
---
success: true
exit_code: 0
----- stdout -----
No activities are currently running.

----- stderr -----
